Fix note list text spacing

--- a/src/styles/blocks.css
+++ b/src/styles/blocks.css
@@ -127,8 +127,11 @@
     list-style: "";
 }
 
+.note-list li {
+    margin-block: 0 1.5em;
+}
+
 .note-list li, .note-list .note {
-    --flow-space: 1.5em;
     background-color: var(--color-background);
     padding: 2rem; 
     margin-inline: -2rem;
